# make_a_fake_brazilian

./: README.md  pyproject.toml  requirements.txt
mkfbr/: __init__.py  generators.py  mkfbr.py  models.py
mkfbr/json/: content.json
