[tool.poetry]
name = "mkfbr"
version = "0.1.3"
description = ""
authors = ["Matheus Santos <78329418+darkmathew@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
